moved backup to settings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -578,6 +578,8 @@
     <string name="time_from">von</string>
     <string name="integrate_substitution_in_timetable">Vertretungen im Stundenplan anzeigen</string>
     <string name="integrate_substitution_in_timetable_desc">Zum Editieren des Stundenplans besser ausschalten</string>
+    <string name="open_all_settings">Alle Einstellungen öffnen</string>
+
     <string name="edit">Bearbeiten</string>
     <string name="submit_delete">Wirklich löschen?</string>
     <string name="automatic_update_check">Automatisch auf Updates prüfen</string>
