--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -497,9 +497,10 @@
     <string name="action_open_main_app">Main app</string>
     <string name="backup_successful">Backup has been saved to Downloads</string>
     <string name="backup_failed">Backup failed</string>
-    <string name="import_successful">Import succeeded</string>
-    <string name="import_failed">Import failed</string>
-    <string name="menu_import_backup">Import (Beta)</string>
+    <string name="import_successful">Restore succeeded</string>
+    <string name="import_failed">Restore failed</string>
+    <string name="menu_import_backup">Restore (Beta)</string>
     <string name="no_backup_found_in_downloads">No Backup found in Downloads</string>
+    <string name="open_all_settings">Open all settings</string>
 
 </resources>
