--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,7 +59,7 @@
     <string name="menu_news">Schülerzeitung</string>
     <string name="menu_navigation">Navigation</string>
     <string name="menu_backup">Backup</string>
-    <string name="menu_import_backup">Importieren (Beta)</string>
+    <string name="menu_import_backup">Wiederherstellen (Beta)</string>
     <string name="menu_podcast" translatable="false">Wendelsteiner Welle</string>
     <string name="room_plan">Raumplan</string>
 
@@ -595,8 +595,8 @@
     <string name="action_open_main_app">Hauptapp</string>
     <string name="backup_successful">Backup in Downloads gespeichert</string>
     <string name="backup_failed">Backup fehlgeschlagen</string>
-    <string name="import_successful">Import erfolgreich</string>
-    <string name="import_failed">Import fehlgeschlagen</string>
+    <string name="import_successful">Wiederherstellen erfolgreich</string>
+    <string name="import_failed">Wiederherstellen fehlgeschlagen</string>
     <string name="no_backup_found_in_downloads">Kein Backup in Downloads gefunden</string>
 
 </resources>
