--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,7 +59,7 @@
     <string name="menu_news">Schülerzeitung</string>
     <string name="menu_navigation">Navigation</string>
     <string name="menu_backup">Backup</string>
-    <string name="menu_import_backup">Wiederherstellen (Beta)</string>
+    <string name="menu_import_backup">Wiederherstellen</string>
     <string name="menu_podcast" translatable="false">Wendelsteiner Welle</string>
     <string name="room_plan">Raumplan</string>
 
