--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -495,12 +495,14 @@
     <string name="do_not_disturb_settings_desc">Automatically switch to do not disturb mode during subjects and then switch it off again</string>
     <string name="do_not_disturb_turn_off">Also turning off</string>
     <string name="action_open_main_app">Main app</string>
-    <string name="backup_successful">Backup has been saved to Downloads</string>
+    <string name="backup_successful">Backup has been saved to %1$s</string>
     <string name="backup_failed">Backup failed</string>
     <string name="import_successful">Restore succeeded</string>
     <string name="import_failed">Restore failed</string>
     <string name="menu_import_backup">Restore</string>
-    <string name="no_backup_found_in_downloads">No Backup found in Downloads</string>
+    <string name="no_backup_found_in_downloads">No Backup found in %1$s</string>
     <string name="open_all_settings">Open all settings</string>
+    <string name="Documents">Documents</string>
+    <string name="Downloads">Downloads</string>
 
 </resources>
