added other colorchooser in timetable

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -505,5 +505,6 @@
     <string name="Documents">Documents</string>
     <string name="Downloads">Downloads</string>
     <string name="menu_items">Menu items</string>
+    <string name="colorPickerDialog_preset">Presets</string>
 
 </resources>
