--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -546,6 +546,7 @@
     <string name="select_end_time">Ende</string>
     <string name="select_color">Farbe</string>
     <string name="choose_color">Farbe auswählen</string>
+    <string name="colorPickerDialog_preset">Vorschläge</string>
     <string name="choose_time">Zeit</string>
     <string name="choose_date">Datum</string>
 
