--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,7 +59,7 @@
     <string name="menu_news">Schülerzeitung</string>
     <string name="menu_navigation">Navigation</string>
     <string name="menu_backup">Backup</string>
-    <string name="menu_import_backup">Wiederherstellen</string>
+    <string name="menu_restore">Wiederherstellen</string>
     <string name="menu_podcast" translatable="false">Wendelsteiner Welle</string>
     <string name="room_plan">Raumplan</string>
 
@@ -580,6 +580,8 @@
     <string name="time_from">von</string>
     <string name="integrate_substitution_in_timetable">Vertretungen im Stundenplan anzeigen</string>
     <string name="integrate_substitution_in_timetable_desc">Zum Editieren des Stundenplans besser ausschalten</string>
+    <string name="integrate_substitution_in_timetable_on">Vertretungen ausblenden</string>
+    <string name="integrate_substitution_in_timetable_off">Vertretungen anzeigen</string>
     <string name="open_all_settings">Alle Einstellungen öffnen</string>
 
     <string name="edit">Bearbeiten</string>
