added delete everything function

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -512,5 +512,9 @@
     <string name="timetable_delete_week">the subject %1$s</string>
     <string name="timetable_delete_note">the note %1$s</string>
     <string name="timetable_delete_exam">the exam %1$s</string>
+    <string name="remove_all_subjects">Delete everything</string>
+    <string name="remove_all_subjects_content">Should all data in the timetable be irretrievably deleted?\n It is advisable to create a backup beforehand!</string>
+    <string name="remove_all_successful">Successfully deleted everything</string>
+    <string name="remove_all_failed">An error occurred</string>
 
 </resources>
