--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -608,5 +608,10 @@
     <string name="timetable_delete_week">das Fach %1$s</string>
     <string name="timetable_delete_note">die Notiz %1$s</string>
     <string name="timetable_delete_exam">die Prüfung %1$s</string>
+    <string name="remove_all_subjects">Alles löschen</string>
+    <string name="remove_all_subjects_content">Sollen alle Daten des Stundenplans unwiederbringliche gelöscht werden?
+        \nEs empfiehlt sich vorher ein Backup anzulegen!</string>
+    <string name="remove_all_successful">Erfolgreich Alles gelöscht</string>
+    <string name="remove_all_failed">Es ist ein Fehler aufgetreten</string>
 
 </resources>
