--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -114,6 +114,7 @@
     <string name="set_show_summary_notif_title">Zusammenfassende Benachrichtigung anzeigen</string>
     <string name="set_show_summary_usual_title">Alle Profile in der zusammenfassenden Benachrichtigung anzeigen</string>
     <string name="set_main_notif_for_all_title">Die prägnante Benachrichtigung für alle Profile senden</string>
+    <string name="set_show_more">Mehr anzeigen</string>
 
 
     <!-- SubstitutionPlan -->
