--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -535,12 +535,13 @@
     <string name="length_of_period">Length of the lesson</string>
     <string name="minutes">minutes</string>
     <string-array name="timetable_header">
-        <item></item>
         <item>Mon</item>
         <item>Tue</item>
         <item>Wed</item>
         <item>Thu</item>
         <item>Fri</item>
+        <item>Sat</item>
+        <item>Sun</item>
     </string-array>
 
 </resources>
