--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -644,4 +644,45 @@
         <item>Son</item>
     </string-array>
 
+    <string-array name="preselected_subjects">
+        <item>Kunst</item>
+        <item>Biologie</item>
+        <item>Chemie</item>
+        <item>Englisch</item>
+        <item>Französisch</item>
+        <item>Geographie</item>
+        <item>Deutsch</item>
+        <item>Geschichte</item>
+        <item>Mathe</item>
+        <item>Musik</item>
+        <item>Physik</item>
+        <item>Sozialkunde</item>
+        <item>Religion</item>
+        <item>Spanisch</item>
+        <item>Sport</item>
+    </string-array>
+
+    <string name="pick_a_subject">Fach auswählen</string>
+    <string name="new_subject">Neues Fach</string>
+    <string name="app_widget_configure_time_style">Zeitdesign  (%s)</string>
+    <string name="configure_widget_controls">Widget konfigurieren</string>
+    <string name="background_color">Hintergrundfarbe</string>
+    <string name="black">Schwarz</string>
+    <string name="white">Weiß</string>
+    <string name="background_color_intensity_15">Intensität der Hintergrundfarbe (15%)</string>
+    <string name="time_style_first_session_of_the_morning">Zeitansicht</string>
+    <string name="style_1">Stil 1</string>
+    <string name="style_2">Stil 2</string>
+    <string name="style_3">Stil 3</string>
+    <string name="no_class">Keine Fächer</string>
+    <string name="confirm">Bestätigen</string>
+    <string name="app_widget_configure_intensity">Intensität der Hintergrundfarbe（%d%%）</string>
+    <string name="select">Auswählen</string>
+    <string name="lesson">Stunde</string>
+    <string name="show_times_instead_of_lessons">Uhrzeiten statt Stunden anzeigen</string>
+    <string name="show_times_instead_of_lessons_desc">Zeige die Uhrzeiten anstatt der Stundenzahl an. Zum Beispiel 8:00 statt 1</string>
+    <string name="time_settings">Zeiteinstellungen</string>
+    <string name="time_settings_desc">Einstellungen über deinen Schulstart und deine Stundenlänge</string>
+    <string name="first_start_setup">Einige Dinge müssen zu Beginn eingestellt werden.</string>
+
 </resources>
