--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -683,6 +683,6 @@
     <string name="show_times_instead_of_lessons_desc">Zeige die Uhrzeiten anstatt der Stundenzahl an. Zum Beispiel 8:00 statt 1</string>
     <string name="time_settings">Zeiteinstellungen</string>
     <string name="time_settings_desc">Einstellungen über deinen Schulstart und deine Stundenlänge</string>
-    <string name="first_start_setup">Einige Dinge müssen zu Beginn eingestellt werden.</string>
+    <string name="first_start_setup">Es müssen ein paar Dinge zu Beginn eingestellt werden.</string>
 
 </resources>
