added even/odd weeks

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -615,6 +615,7 @@
     <string name="no_backup_found_in_downloads">Kein Backup in %1$s gefunden</string>
     <string name="Documents">Dokumente</string>
     <string name="Downloads">Downloads</string>
+    <string name="timetable_delete_content">Soll %1$s gelöscht werden?</string>
     <string name="timetable_delete_week">das Fach %1$s</string>
     <string name="timetable_delete_note">die Notiz %1$s</string>
     <string name="timetable_delete_exam">die Prüfung %1$s</string>
@@ -677,5 +678,8 @@
     <string name="lesson">Stunde</string>
     <string name="show_times_instead_of_lessons">Uhrzeiten statt Stunden anzeigen</string>
     <string name="show_times_instead_of_lessons_desc">Zeige die Uhrzeiten anstatt der Stundenzahl an. Zum Beispiel 8:00 statt 1</string>
+    <string name="enable_even_odd_weeks">A \u0026 B Wochen aktivieren</string>
+    <string name="even_week">Woche A</string>
+    <string name="odd_week">Woche B</string>
 
 </resources>
