--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -582,5 +582,5 @@
 
     <string name="select">Select</string>
 
-    <string name="delete_content">Should %1$s be deleted?</string>
+    <string name="timetable_delete_content">Should %1$s be deleted?</string>
 </resources>
