--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -117,6 +117,7 @@
 
     <!-- SubstitutionPlan -->
     <string name="nothing">Keine Vertretung für dich.</string>
+    <string name="nothing_for_whole_day">Keine Vertretungen an diesem Tag.</string>
     <string name="back_button">Erneut drücken zum Beenden</string>
     <string name="downloading">Lädt\u2026</string>
     <string name="footprint">Mit der GymWen App erzeugt: https://asdoi.gitlab.io/</string>
