--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -486,8 +486,9 @@
     <string name="timetable_channel_desc">A notification about your lessons</string>
     <string name="do_not_disturb_permission_desc">In order to automatically switch to do not disturb mode, the app requires the appropriate authorization</string>
     <string name="do_not_disturb_setting">Automatic Do not disturb</string>
-    <string name="do_not_disturb_settings_desc">Automatically switch to do not disturb mode during subjects and then switch it off again</string>
+    <string name="do_not_disturb_settings_desc">Automatically switch to do not disturb mode during subjects.</string>
     <string name="do_not_disturb_turn_off">Also turning off</string>
+    <string name="do_not_disturb_turn_off_desc">Turn do not disturb mode off at the end of the subjects.</string>
     <string name="action_open_main_app">Main app</string>
     <string name="backup_successful">Backup has been saved to %1$s</string>
     <string name="backup_failed">Backup failed</string>
