--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -692,5 +692,6 @@
     <string name="odd_week">Woche B</string>
     <string name="intelligent_auto_fill">Automatisch passende Start-/End-Zeiten</string>
     <string name="intelligent_auto_fill_desc">Automatisch die passenden Start-/End-Zeiten zu deinen Eingaben auswählen.</string>
-
+    <string name="show_preselection_list">Vorauswahlliste anzeigen</string>
+    <string name="set_preselection_elements">Elemente der Liste festlegen</string>
 </resources>
