added de-/select all preselection

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -607,4 +607,5 @@
     <string name="url">URL</string>
     <string name="show_preselection_list">Show preselection list</string>
     <string name="set_preselection_elements">Set the elements of the list</string>
+    <string name="de_select_all">De-/Select all</string>
 </resources>
