--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -206,7 +206,7 @@
 
     <string name="no_email_app">You don\'t have an email app installed</string>
     <string name="teacher_no_teacher_found">No teacher was found matching this data.</string>
-    <string name="teacher_search_teacher_list">Search\u2026</string>
+    <string name="search_through">Search\u2026</string>
 
 
     <string name="nav_filter">Filtered</string>
