--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -297,7 +297,7 @@
     <string name="no_email_app">Du hast keine E-Mail App installiert.</string>
     <string name="no_navigation_app">Du hast keine Navi-App installiert.</string>
     <string name="teacher_no_teacher_found">Es wurde kein Lehrer mit diesen Daten gefunden.</string>
-    <string name="teacher_search_teacher_list">Durchsuchen\u2026</string>
+    <string name="search_through">Durchsuchen\u2026</string>
     <string name="teacher_mail">Mail</string>
 
     <!-- Credits -->
