added R.237 and some mebis strings

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -608,4 +608,9 @@
     <string name="show_preselection_list">Show preselection list</string>
     <string name="set_preselection_elements">Set the elements of the list</string>
     <string name="de_select_all">De-/Select all</string>
+    <string name="download_mebis_app">Download Mebis App</string>
+    <string name="download_mebis_app_title">Downloading Mebis App…</string>
+    <string name="download_mebis_app_msg">Recently I have published a self-programmed separate Mebis app.
+        \nWith the help of this app, the handling of Mebis should be kept as simple as possible.
+        \nDo you want to download the Mebis app?</string>
 </resources>
