--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -125,7 +125,7 @@
     <string name="noInternet">Du bist nicht mit dem Internet verbunden!</string>
     <string name="noInternetConnection">Keine Internetverbindung!</string>
     <string name="share_substitution_plan">Vertretung senden an\u2026</string>
-    <string name="day_past">(Vergangen)</string>
+    <string name="day_past">Vergangen</string>
     <string name="with_teacher">bei</string>
     <string name="missing_short">entf</string>
     <string name="add_to_my_courses">Zu meinen Kursen hinzufügen</string>
